# No-Reference-Image-Quality-Assessment-using-BRISQUE-Model

./: README.md
C++/: CMakeLists.txt  brisque.cpp  brisque.h  computescore.cpp
C++/test/: test_computescore.cpp  test_runner_basic.cpp
